[gd_scene load_steps=13 format=3 uid="uid://b53ei5pw13olq"]

[ext_resource type="Script" path="res://scripts/Dude.gd" id="1_4teeh"]
[ext_resource type="Texture2D" path="res://sprites/tilemap001.png" id="2_qerr6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wu3lo"]
atlas = ExtResource("2_qerr6")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_me0ph"]
atlas = ExtResource("2_qerr6")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8m8e7"]
atlas = ExtResource("2_qerr6")
region = Rect2(64, 160, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cl12h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wu3lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_me0ph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8m8e7")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_fqwu4"]
atlas = ExtResource("2_qerr6")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_etng6"]
atlas = ExtResource("2_qerr6")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6u4os"]
atlas = ExtResource("2_qerr6")
region = Rect2(160, 160, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jwwpt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqwu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etng6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6u4os")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ddwqe"]
size = Vector2(22, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mjpcw"]
size = Vector2(12, 26)

[node name="Dude" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_4teeh")

[node name="DefaultSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_cl12h")
animation = &"walk"
autoplay = "walk"
frame_progress = 0.307002

[node name="MadSprite" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_jwwpt")
animation = &"walk"
autoplay = "walk"
frame_progress = 0.639336

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_ddwqe")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -4)
target_position = Vector2(14, 0)

[node name="RayCastDownRight" type="RayCast2D" parent="."]
position = Vector2(0, -4)
target_position = Vector2(10, 8)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -4)
target_position = Vector2(-14, 0)

[node name="RayCastDownLeft" type="RayCast2D" parent="."]
position = Vector2(0, -4)
target_position = Vector2(-10, 8)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -17)
shape = SubResource("RectangleShape2D_mjpcw")

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
